Fix contrast accessibility

--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ body {
 .header-bar header {
   flex: 3;
   font-size: 18px;
-  color: #5263ff;
+  color: #5050F5;
   font-weight: bold;
   animation: rotate 3s linear;
 }
@@ -99,7 +99,7 @@ body {
   border-radius: 8px;
   margin: 5px;
   background-color: #ebebff;
-  color: #5263ff;
+  color: #5050F5;
 }
 
 .second-section ul li {
@@ -109,7 +109,7 @@ body {
 }
 
 .second-section h3 {
-  color: #7f8cff;
+  color: #6060ff;
   font-size: 16px;
   margin: 20px auto;
   font-weight: 500;
@@ -129,7 +129,7 @@ body {
   width: 25px;
   height: 2px;
   border-radius: 3px;
-  background-color: #5263ff;
+  background-color: #5050F5;
 }
 
 /* Cards */
@@ -198,7 +198,7 @@ body {
 }
 
 .see-project {
-  color: #5263ff;
+  color: #5050F5;
   border: 1px solid #396df2;
   padding: 16px;
   border-radius: 10px;
@@ -208,7 +208,7 @@ body {
 }
 
 .see-project:hover {
-  background-color: #5263ff;
+  background-color: #5050F5;
   box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
   color: #fff;
@@ -267,7 +267,7 @@ body {
 }
 
 .see-resume:hover {
-  background-color: #5263ff;
+  background-color: #5050F5;
   box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
   color: #fff;
@@ -279,7 +279,7 @@ body {
 }
 
 .about h3 {
-  color: #7f8cff;
+  color: #6060ff;
   font-size: 16px;
   font-weight: 500;
 }
@@ -352,7 +352,7 @@ hr {
   align-items: center;
   padding: 103px 24px 1px;
   border-radius: 87px 1px 1px 1px;
-  background-color: #5263ff;
+  background-color: #5050F5;
   background-image: url('./img/form_shapes_mobile.png');
   background-size: 48%;
   background-position: 194px 31px;
@@ -373,7 +373,7 @@ hr {
 }
 
 .form-footer p {
-  color: #ebebff;
+  color: #fff;
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
@@ -397,7 +397,7 @@ hr {
 
 .contact-form-button {
   align-self: start;
-  color: #5263ff;
+  color: #5050F5;
   border: 1px solid #396df2;
   background-color: white;
   padding: 12px 16px;
@@ -410,7 +410,7 @@ hr {
 }
 
 .contact-form-button:hover {
-  background-color: #5263ff;
+  background-color: #5050F5;
   box-shadow: 1px 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
   color: #fff;
